<resources>
    <string name="app_name">Aula02</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_contato">Contato</string>
    <string name="action_stats">Stats</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_autores">Autores</string>
    <string name="menu_alunos">Alunos</string>
    <string name="menu_biografias">Biografias</string>
    <string name="menu_jogo1">Jogo 1</string>
    <string name="menu_jogo2">Jogo 2</string>
    <string name="nova_activity">Nova Activity</string>
    <string name="menu_database">Banco de Dados</string>
    <string name="menu_internet">Internet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="alunos">
        <item>Gislaine</item>
        <item>Rodrigo</item>
    </string-array>
    <string name="title_activity_kotlin">KotlinActivity</string>

</resources>
