<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_autores"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_autores" />
        <item
            android:id="@+id/nav_alunos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_alunos" />
        <item
            android:id="@+id/nav_biografias"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_biografias" />
        <item
            android:id="@+id/nav_jogo1"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_jogo1" />

        <item
            android:id="@+id/nav_jogo2"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_jogo2" />

        <item
            android:id="@+id/nav_jogo3"
            android:icon="@drawable/ic_menu_manage"
            android:title="Jogo 3" />

        <item
            android:id="@+id/nav_kotlin"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nova_activity" />

        <item
            android:id="@+id/nav_database"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_database" />

        <item
            android:id="@+id/nav_internet"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_internet" />

        <item
            android:id="@+id/nav_recycler_firebase"
            android:icon="@drawable/ic_menu_manage"
            android:title="RecyclerView Firebase" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
